# GoldDisplay

./: CMakeLists.txt  README.md
.cache/clangd/index/: gold_price_fetcher.cpp.E893366EB552BA1B.idx  gold_price_fetcher.h.A1F85BBF56B7A3D9.idx  main.cpp.E3DFC67B1C7CD278.idx  mainwindow.cpp.F576048C3F5CC093.idx  mainwindow.h.AF951482AC4A2CDB.idx
src/: gold_price_fetcher.cpp  gold_price_fetcher.h  info_display_widget.cpp  info_display_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  traywidget.cpp  traywidget.h
